--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+blowfish = "0.9.1"
 rpassword = "7.3.1"
 sha2 = "0.10.8"
 threefish = "0.5.2"
